docs/api/qiskit/0.39/qiskit.transpiler.passes.ResetAfterMeasureSimplification.mdx
---
title: ResetAfterMeasureSimplification (v0.39)
description: API reference for qiskit.transpiler.passes.ResetAfterMeasureSimplification in qiskit v0.39
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.transpiler.passes.ResetAfterMeasureSimplification
---

# ResetAfterMeasureSimplification

<Class id="qiskit.transpiler.passes.ResetAfterMeasureSimplification" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.22/qiskit/transpiler/passes/optimization/reset_after_measure_simplification.py" signature="ResetAfterMeasureSimplification(*args, **kwargs)" modifiers="class">
  Bases: [`qiskit.transpiler.basepasses.TransformationPass`](qiskit.transpiler.TransformationPass "qiskit.transpiler.basepasses.TransformationPass")

  This pass replaces reset after measure with a conditional X gate.

  This optimization is suitable for use on IBM Quantum systems where the reset operation is performed by a measurement followed by a conditional x-gate. It might not be desireable on other backends if reset is implemented differently.

  ## Methods

  <span id="qiskit-transpiler-passes-resetaftermeasuresimplification-name" />

  ### name

  <Function id="qiskit.transpiler.passes.ResetAfterMeasureSimplification.name" signature="ResetAfterMeasureSimplification.name()">
    Return the name of the pass.
  </Function>

  <span id="qiskit-transpiler-passes-resetaftermeasuresimplification-run" />

  ### run

  <Function id="qiskit.transpiler.passes.ResetAfterMeasureSimplification.run" signature="ResetAfterMeasureSimplification.run(dag)">
    Run the pass on a dag.
  </Function>

  ## Attributes

  ### is\_analysis\_pass

  <Attribute id="qiskit.transpiler.passes.ResetAfterMeasureSimplification.is_analysis_pass">
    Check if the pass is an analysis pass.

    If the pass is an AnalysisPass, that means that the pass can analyze the DAG and write the results of that analysis in the property set. Modifications on the DAG are not allowed by this kind of pass.
  </Attribute>

  ### is\_transformation\_pass

  <Attribute id="qiskit.transpiler.passes.ResetAfterMeasureSimplification.is_transformation_pass">
    Check if the pass is a transformation pass.

    If the pass is a TransformationPass, that means that the pass can manipulate the DAG, but cannot modify the property set (but it can be read).
  </Attribute>
</Class>

